k8s/landing-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-api
  namespace: varhavix
spec:
  replicas: 2
  selector:
    matchLabels:
      app: landing-api
  template:
    metadata:
      labels:
        app: landing-api
    spec:
      containers:
      - name: landing-api
        image: ghcr.io/varhavix-org/vx_app_landing_api:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: landing-api-service
  namespace: varhavix
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: landing-api
