k8s/landing-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-ui
  namespace: varhavix
spec:
  replicas: 2
  selector:
    matchLabels:
      app: landing-ui
  template:
    metadata:
      labels:
        app: landing-ui
    spec:
      containers:
      - name: landing-ui
        image: ghcr.io/varhavix-org/vx_app_landing_ui:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: landing-ui-service
  namespace: varhavix
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: landing-ui
