k8s/media-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vx-media-api
  namespace: varhavix
  labels:
    app: vx-media-api
    tier: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vx-media-api
  template:
    metadata:
      labels:
        app: vx-media-api
        tier: api
    spec:
      containers:
        - name: vx-media-api
          image: varhavix/vx-media-api:latest
          ports:
            - containerPort: 8086
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: vx-media-api
  namespace: varhavix
spec:
  selector:
    app: vx-media-api
  ports:
    - port: 8086
      targetPort: 8086
