k8s/mentor-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vx-mentor-api
  namespace: varhavix
  labels:
    app: vx-mentor-api
    tier: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vx-mentor-api
  template:
    metadata:
      labels:
        app: vx-mentor-api
        tier: api
    spec:
      containers:
        - name: vx-mentor-api
          image: varhavix/vx-mentor-api:latest
          ports:
            - containerPort: 8085
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: vx-mentor-api
  namespace: varhavix
spec:
  selector:
    app: vx-mentor-api
  ports:
    - port: 8085
      targetPort: 8085
